# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/: general.yaml
.github/workflows/: general.yaml
configuration/: base.yaml  configuration.yaml  production.yaml
migrations/: 20250325054145_create_subscriptions_table.sql  20250429050603_add_status_to_subscriptions.sql  20250429053011_create_subscription_tokens_table.sql  20250601210257_create_users_table.sql  20250601213812_rename_password_column.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
