[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Takkaryx"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12.15"
