[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Takkaryx"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "rt"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
config = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.16"
serde-aux = "4.6.0"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = [
  "json",
  "rustls-tls",
], default-features = false }
rand = { version = "0.9.1", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.8.4"
features = [
  "runtime-tokio-rustls",
  "macros",
  "sqlx-macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
claim = "0.5.0"
fake = "4.3.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.140"
wiremock = "0.6.3"
